<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_margin_vertical"
    android:paddingBottom="@dimen/activity_margin_vertical"
    android:paddingLeft="@dimen/activity_margin_horizontal"
    android:paddingRight="@dimen/activity_margin_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/masukan_angka_1"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_angka_satu"
        android:inputType="numberDecimal"
        android:lines="1"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/masukan_angka_2"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_angka_dua"
        android:inputType="numberDecimal"
        android:lines="1"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_hitung"
        android:text="@string/hitung"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_pindah_page"
        android:text="@string/pindah_halaman"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_hasil"
        android:text="@string/hasil_penjumlahan"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingBottom="@dimen/activity_margin_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>